CF-ASG,Temp,ALB,TargGrp,ASG.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Initialize an Auto Scaling Group, Launch Template, ELB, Target Group, and Auto Scaling policy

Parameters: 
  VpcId:
    Type: AWS::EC2::VPC::Id
  LaunchTemplateName:
    Type: String
    Description: Enter Launch Template name
  EC2KeyName:
    Description: Name of an EC2 KeyPair to enable SSH access to the instance.
    Type: AWS::EC2::KeyPair::KeyName
  AutoScalingGroupName:
    Type: String
    Description: Enter ASG name
  PrivateSubnetId1:
    Type: AWS::EC2::Subnet::Id
    Description: The ASG should launch instances into the private subnets
  PrivateSubnetId2:
    Type: AWS::EC2::Subnet::Id
    Description: The ASG should launch instances into the private subnets
  PublicSubnetId1:
    Type: AWS::EC2::Subnet::Id
    Description: Place ALB in public subnets
  PublicSubnetId2:
    Type: AWS::EC2::Subnet::Id
    Description: Place ALB in public subnets
  LoadBalancerName:
    Type: String
    Description: Enter name for Load Balancer
  SGId:
    Type: AWS::EC2::SecurityGroup::Id
    Description: Attach RDS connection via SG
  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2

Resources:
  WebServerLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Ref LaunchTemplateName
      LaunchTemplateData: 
        ImageId: !Ref LatestAmiId
        InstanceType: t2.micro
        KeyName: !Ref EC2KeyName
        SecurityGroupIds:
          - !Ref WebServerSG
          - !Ref SGId    
        UserData:
          Fn::Base64: |
            #!/bin/bash
            yum -y update
            yum -y install php httpd mysql
            PHP_VERSION=`php -v | head -n 1 | awk '{print $2}' | awk -F "." '{print $1}'`
            while [ ${PHP_VERSION} -ne 7 ]
            do
            amazon-linux-extras install php7.4 -y
            PHP_VERSION=`php -v | head -n 1 | awk '{print $2}' | awk -F "." '{print $1}'`
            done
            yum -y install php-mbstring php-xml
            wget http://wordpress.org/latest.tar.gz -P /tmp/
            tar zxvf /tmp/latest.tar.gz -C /tmp
            cp -r /tmp/wordpress/* /var/www/html/
            chown apache:apache -R /var/www/html
            systemctl enable httpd.service
            systemctl start httpd.service
  WebServerSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Web Server
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup # Allow HTTP traffic from ELB
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup  # Allow SSH access from ELB
      Tags:
        - Key: Name
          Value: CF_WebServer-SG

  WebServerAutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties: 
      AutoScalingGroupName: !Ref AutoScalingGroupName
      LaunchTemplate: 
        LaunchTemplateName: !Ref LaunchTemplateName
        Version: !GetAtt WebServerLaunchTemplate.LatestVersionNumber
      AvailabilityZones:
        - us-east-1a
        - us-east-1b
      MinSize: '1'
      MaxSize: '3'
      DesiredCapacity: '1'
      TargetGroupARNs:
        - !Ref TargetGroup
      VPCZoneIdentifier:
        - !Ref PrivateSubnetId1
        - !Ref PrivateSubnetId2

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Application Load Balancer
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0  # Allow traffic from anywhere
      Tags:
        - Key: Name
          Value: CF-ALB-SG
  
  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Ref LoadBalancerName
      Type: application
      Subnets:
        - !Ref PublicSubnetId1
        - !Ref PublicSubnetId2
      SecurityGroups:
        - !Ref LoadBalancerSecurityGroup
      Scheme: internet-facing
      IpAddressType: ipv4

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: MyTargetGroup
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VpcId
      TargetType: instance
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      Tags:
        - Key: Name
          Value: CF_AMI-targetgroup

  HTTPListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
          
  WebServerScaleOutPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref WebServerAutoScalingGroup
      Cooldown: 60
      ScalingAdjustment: 1

  WebServerScaleInPolicy:
    Type: AWS::AutoScaling::ScalingPolicy
    Properties:
      AdjustmentType: ChangeInCapacity
      AutoScalingGroupName: !Ref WebServerAutoScalingGroup
      Cooldown: 60
      ScalingAdjustment: -1

  CPUUtilizationScaleOutAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Scale-out if CPU >70% for 10 minutes
      MetricName: CPUUtilization
      Namespace: AWS/ELB
      Statistic: Average
      Period: 300
      EvaluationPeriods: 2
      Threshold: 70
      AlarmActions:
        - !Ref WebServerScaleOutPolicy
      Dimensions: 
        - Name: LoadBalancerName
          Value: !Ref WebServerAutoScalingGroup
      ComparisonOperator: GreaterThanThreshold

  CPUUtilizationScaleInAlarm:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: Scale-in if CPU >25% for 10 minutes
      MetricName: CPUUtilization
      Namespace: AWS/ELB
      Statistic: Average
      Period: 300
      EvaluationPeriods: 2
      Threshold: 25
      AlarmActions:
        - !Ref WebServerScaleInPolicy
      Dimensions: 
        - Name: LoadBalancerName
          Value: !Ref WebServerAutoScalingGroup
      ComparisonOperator: LessThanThreshold
Outputs:
  WebServerLaunchTemplate:
    Description: Launch Template ID
    Value: !Ref WebServerLaunchTemplate
    Export:
      Name: projectlt
  WebServerAutoScalingGroup:
    Description: Auto Scaling Groupt ID
    Value: !Ref WebServerAutoScalingGroup
    Export:
      Name: projectasg
  ApplicationLoadBalancer:
    Description: Application Load Balancer ID
    Value: !Ref ApplicationLoadBalancer
    Export: 
      Name: projectalb
  TargetGroup:
    Description: Target Group ID
    Value: !Ref TargetGroup
    Export: 
      Name: projecttg
