CF-EC2,RDS,S3.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Initialize an EC2, RDS instance, and S3 Bucket

Parameters:
  InstanceName:
    Type: String
    Default: CFAMIServer
    Description: Name of the EC2 instance
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: ID of the VPC where the EC2 instance will be created (required)
  KeyPairName:
    Type: String
    Description: Name of the new EC2 Key Pair
  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: ID of the subnet where the EC2 instance will be created
  LatestAmiId:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  DBInstanceIdentifier:
    Type: String
    Default: CFWordPressDb
    Description: Unique identifier for the DB instance
  DBName:
    Type: String
    Default: CFPrimaryRDS
    Description: Initial name for the database
  DBMasterUsername:
    Type: String
    Default: admin
    Description: Username for the master DB user
  DBMasterPassword:
    Type: String
    Description: Password for the master DB user
    NoEcho: true
  SubnetIds:
    Type: List<AWS::EC2::Subnet::Id>
    Description: List of private subnet IDs for the subnet group
  BucketName:
    Type: String
    Default: cfsit233bucket
    Description: Name for the S3 bucket

Resources:
  NewKeyPair:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Ref KeyPairName
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
        - Key: Name
          Value: !Ref InstanceName
      ImageId: !Ref LatestAmiId  # Amazon Linux 2 AMI (HVM), SSD Volume Type
      InstanceType: t2.micro
      KeyName: !Ref KeyPairName
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          SubnetId: !Ref SubnetId  
          DeviceIndex: 0
          GroupSet:
            - !Ref EC2SecurityGroup           
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum -y update
          yum -y install php httpd mysql
          PHP_VERSION=`php -v | head -n 1 | awk '{print $2}' | awk -F "." '{print $1}'`
          while [ ${PHP_VERSION} -ne 7 ]
          do
          amazon-linux-extras install php7.4 -y
          PHP_VERSION=`php -v | head -n 1 | awk '{print $2}' | awk -F "." '{print $1}'`
          done
          yum -y install php-mbstring php-xml
          wget http://wordpress.org/latest.tar.gz -P /tmp/
          tar zxvf /tmp/latest.tar.gz -C /tmp
          cp -r /tmp/wordpress/* /var/www/html/
          chown apache:apache -R /var/www/html
          systemctl enable httpd.service
          systemctl start httpd.service
  EC2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the EC2 instance
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0  # Allow HTTP traffic from anywhere
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0  # Allow SSH access from anywhere
      Tags:
        - Key: Name
          Value: CFAMISG
  DBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for MySQL RDS instance
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref EC2SecurityGroup # Allow MySQL traffic from Web Server
      Tags:
        - Key: Name
          Value: CFRDSSG
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for MySQL RDS instance
      SubnetIds: !Ref SubnetIds
      Tags:
        - Key: Name
          Value: CFRDSPrivateSubnetGroup
  DBInstance:
    Type: AWS::RDS::DBInstance
    DependsOn: DBSecurityGroup
    Properties:
      DBInstanceIdentifier: !Ref DBInstanceIdentifier
      DBInstanceClass: db.t3.micro
      Engine: MySQL
      EngineVersion: 8.0.35
      DBName: !Ref DBName
      MasterUsername: !Ref DBMasterUsername
      MasterUserPassword: !Ref DBMasterPassword
      MultiAZ: true
      AllocatedStorage: 20
      PubliclyAccessible: false
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !GetAtt DBSecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: CFPrimaryRDSInstance
  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref BucketName
      PublicAccessBlockConfiguration:
        BlockPublicAcls: false
        IgnorePublicAcls: false
        BlockPublicPolicy: false
        RestrictPublicBuckets: false
      OwnershipControls:
        Rules:
          - ObjectOwnership: BucketOwnerPreferred
Outputs:
  KeyPair:
    Description: New EC2 Key Pair
    Value: !Ref KeyPairName
    Export:
      Name: !Sub "${AWS::StackName}-KeyPairName"
  EC2InstanceId:
    Description: ID of the EC2 instance
    Value: !Ref EC2Instance
  DBInstanceId:
    Description: RDS instance identifier 
    Value: !Ref DBInstance
  DBSubnetGroup:
    Description: ID of DB subnet group
    Value: !Ref DBSubnetGroup
  BucketName:
    Description: Name of the created S3 bucket
    Value: !Ref S3Bucket
